--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     }
   ],
   "dependencies": {
+    "babel": "^5.6.2",
     "browserify": "^9.0.8",
     "domain": "0.0.1",
     "es6ify": "^1.6.0",
@@ -50,7 +51,8 @@
     "gulp-tap": "^0.1.3",
     "gulp-util": "^3.0.4",
     "handlebars": "^3.0.2",
-    "hbsfy": "^2.2.1"
+    "hbsfy": "^2.2.1",
+    "mocha": "^2.2.5"
   },
   "license": "ISC",
   "bugs": {
