--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-streamify": "0.0.5",
     "gulp-tap": "^0.1.3",
     "gulp-util": "^3.0.4",
+    "gulp-webserver": "^0.9.1",
     "handlebars": "^3.0.2",
     "hbsfy": "^2.2.1",
     "mocha": "^2.2.5",
