--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       "email": "sergey.rizovs@3m5.de"
     }
   ],
-  "dependencies": {
+  "devDependencies": {
     "babel": "^5.6.2",
     "browserify": "^9.0.8",
     "domain": "0.0.1",
@@ -54,10 +54,12 @@
     "gulp-tap": "^0.1.3",
     "gulp-util": "^3.0.4",
     "gulp-webserver": "^0.9.1",
-    "handlebars": "^3.0.2",
     "hbsfy": "^2.2.1",
     "mocha": "^2.2.5",
     "run-sequence": "^1.1.2"
+  },
+  "dependencies": {
+    "handlebars": "^3.0.2"
   },
   "license": "ISC",
   "bugs": {
