--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gulp-babel": "^5.2.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
+    "gulp-shell": "^0.4.3",
     "gulp-streamify": "0.0.5",
     "gulp-tap": "^0.1.3",
     "gulp-util": "^3.0.4",
