--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-shell": "^0.4.3",
     "gulp-streamify": "0.0.5",
     "gulp-tap": "^0.1.3",
+    "gulp-traceur": "^0.17.1",
     "gulp-util": "^3.0.4",
     "gulp-webserver": "^0.9.1",
     "hbsfy": "^2.2.1",
