--- a/package.json
+++ b/package.json
@@ -55,14 +55,14 @@
     "gulp-tap": "^0.1.3",
     "gulp-util": "^3.0.4",
     "gulp-webserver": "^0.9.1",
+    "handlebars": "^4.0.3",
     "hbsfy": "^2.2.1",
     "mocha": "^2.2.5",
     "traceur": "0.0.91",
+    "underscore": "^1.8.3",
     "run-sequence": "^1.1.2"
   },
   "dependencies": {
-    "handlebars": "^4.0.3",
-    "underscore": "^1.8.3"
   },
   "license": "ISC",
   "bugs": {
