--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     }
   ],
   "devDependencies": {
+    "JSON": "^1.0.0",
     "babel": "^5.6.2",
     "browserify": "^9.0.8",
     "domain": "0.0.1",
@@ -58,9 +59,9 @@
     "handlebars": "^4.0.3",
     "hbsfy": "^2.2.1",
     "mocha": "^2.2.5",
+    "run-sequence": "^1.1.2",
     "traceur": "0.0.91",
-    "underscore": "^1.8.3",
-    "run-sequence": "^1.1.2"
+    "underscore": "^1.8.3"
   },
   "dependencies": {},
   "license": "ISC",
