- Coco.Translator is now instantiated automatically - HandlebarsHelper getText(key, replaceArray) is now registered by default, call it to get i18n text directly from Coco.Translator - Coco.Plugins are no more available - uses now npm-module jquery instead of custom jQuery library

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gulp-webserver": "^0.9.1",
     "handlebars": "^4.0.3",
     "hbsfy": "^2.2.1",
+    "jquery": "^2.2.1",
     "mocha": "^2.2.5",
     "run-sequence": "^1.1.2",
     "traceur": "0.0.91",
