--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   ],
   "devDependencies": {
     "JSON": "^1.0.0",
-    "babel": "^5.6.2",
     "browserify": "^9.0.8",
     "domain": "0.0.1",
     "es6ify": "^1.6.0",
@@ -58,13 +57,15 @@
     "gulp-webserver": "^0.9.1",
     "handlebars": "^4.0.3",
     "hbsfy": "^2.2.1",
-    "jquery": "^2.2.1",
     "mocha": "^2.2.5",
     "run-sequence": "^1.1.2",
-    "traceur": "0.0.91",
+    "traceur": "0.0.91"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.7.2",
+    "jquery": "^2.2.1",
     "underscore": "^1.8.3"
   },
-  "dependencies": {},
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/3m5/coco/issues"
