--- a/package.json
+++ b/package.json
@@ -42,28 +42,27 @@
     }
   ],
   "devDependencies": {
-    "browserify": "^9.0.8",
+    "browserify": "^13.0.0",
     "domain": "0.0.1",
     "es6ify": "^1.6.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
-    "gulp-clean": "^0.3.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.5.2",
-    "gulp-shell": "^0.4.3",
-    "gulp-streamify": "0.0.5",
+    "gulp-shell": "^0.5.2",
+    "gulp-streamify": "1.0.2",
     "gulp-tap": "^0.1.3",
-    "gulp-util": "^3.0.4",
+    "gulp-util": "^3.0.7",
     "gulp-webserver": "^0.9.1",
-    "handlebars": "^4.0.3",
-    "hbsfy": "^2.2.1",
-    "mocha": "^2.2.5",
-    "run-sequence": "^1.1.2",
-    "traceur": "0.0.91"
+    "handlebars": "^4.0.5",
+    "hbsfy": "^2.6.0",
+    "mocha": "^2.4.5",
+    "run-sequence": "^1.1.5"
   },
   "dependencies": {
     "JSON": "^1.0.0",
-    "babel-polyfill": "^6.7.2",
-    "jquery": "^2.2.1",
+    "babel-polyfill": "^6.7.4",
+    "jquery": "^2.2.3",
     "underscore": "^1.8.3"
   },
   "license": "ISC",
