--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     }
   ],
   "devDependencies": {
+    "babel-plugin-es6-promise": "^1.0.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-2": "^6.11.0",
+    "babel-preset-stage-3": "^6.11.0",
     "browserify": "^13.0.0",
     "domain": "0.0.1",
     "es6ify": "^1.6.0",
