--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
       "email": "andreas.wiedenfeld@3m5.de"
     },
     {
-      "name": "Erik Neumann",
-      "email": "erik.neumann@3m5.de"
+      "name": "Erik Swars",
+      "email": "erik.swars@3m5.de"
     },
     {
-      "name": "Sergey Rizovs",
-      "email": "sergey.rizovs@3m5.de"
+      "name": "Lukas Gerlach",
+      "email": "lukas.gerlach@3m5.de"
     }
   ],
   "devDependencies": {
